# p9e5

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  preprocess.py  pyproject.toml  render.yaml  requirements.txt  train_model.py
api/: main.py
app/: api.py  app.py  utils.py
app/samples/: sample_comments.csv  sample_comments.txt
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  constants.js  main.jsx  theme.js
frontend/src/components/: AnalyzeTab.jsx  HistoryTab.jsx  PresentationTab.jsx  StatsTab.jsx  UrlTab.jsx
hate-speech-detector/: Untitled.ipynb  pyproject.toml
notebooks/: 01_eda.ipynb  01_eda_preprocessing_model.ipynb  02_preprocessing.ipynb  03_modeling.ipynb  04_transformer.ipynb
